# pytau

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  changepoint_analysis.py  changepoint_io.py  changepoint_model.py  changepoint_preprocess.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  setup.sh
.github/scripts/: generate_test_summary.py  update_readme_tests.py
.github/workflows/: docs_test.yml  execute_notebooks.yml  install_test.yml  openjournals_pdf_generator.yml  publish-to-pypi.yml  pytest.yml  pytest_workflow.yml  python-tests.yml
JOSS_submission/: paper.bib  paper.md
api/: index.html
data_formats/: index.html
docs/: api.md  data_formats.md  examples.md  index.md  inference.md  models.md  notebook_testing.md  pipeline.md  pymc_concepts.md
examples/: index.html
inference/: index.html
models/: changepoint.md  index.html
pymc_concepts/: index.html
pytau/: README.txt  __init__.py  bla_dirs.txt  changepoint_analysis.py  changepoint_api.py  changepoint_io.py  changepoint_model.py  changepoint_preprocess.py  config.py
pytau/_experimental/: dpp_multi_nrn_multi_trial_pytau_2.ipynb
pytau/_v1/: changepoint_fit.py  poisson_all_tastes_changepoint_model.py
pytau/analyses/: bla_population_elbo.py  pretty_bla_neuron.py
pytau/batch_scripts/: parallel_jobs.txt  test_run.py
pytau/composable/: README.md  __init__.py  base.py  changepoints.py  emissions.py  examples.py  likelihoods.py  models.py
pytau/config/: MODEL_SAVE_DIR.params
pytau/examples/: Bayesian_Changepoint_Model.html
pytau/how_to/: GET_STARTED.txt  fit_manually.py  fit_with_fit_handler.py
pytau/how_to/examples/: Bayesian_Changepoint_Model.html  Bayesian_Changepoint_Model.ipynb  changepoint_fit_test.py  database_handler_test.py
pytau/how_to/model_demos/: AllTastePoisson_demo.ipynb  CategoricalChangepoint2D_demo.ipynb  GaussianChangepointMean2D_demo.ipynb  GaussianChangepointMeanDirichlet_demo.ipynb  GaussianChangepointMeanVar2D_demo.ipynb  README.md  SingleTastePoisson_demo.ipynb
pytau/how_to/model_notebooks/: AllTastePoisson.ipynb  AllTastePoisson_Enhanced.ipynb  CategoricalChangepoint2D.ipynb  CategoricalChangepoint2D_Enhanced.ipynb  GaussianChangepointMean2D.ipynb  GaussianChangepointMean2D_Enhanced.ipynb  GaussianChangepointMeanDirichlet.ipynb  GaussianChangepointMeanDirichlet_Enhanced.ipynb  GaussianChangepointMeanVar2D.ipynb  GaussianChangepointMeanVar2D_Enhanced.ipynb  GeneralChangepointExamples.ipynb  SingleTastePoisson.ipynb  SingleTastePoissonDirichlet.ipynb  SingleTastePoissonDirichlet_Enhanced.ipynb  SingleTastePoisson_Enhanced.ipynb
pytau/how_to/notebooks/: PyTau_New_API_Example.ipynb  PyTau_Verbose_Example.ipynb  PyTau_Walkthrough_no_handlers.ipynb  PyTau_Walkthrough_with_handlers.ipynb
pytau/tests/: laser_spike_test.py
pytau/utils/: __init__.py  ephys_data.py  fit_to_array.py  plotting.py
pytau/v2/: changepoint_analysis.py  changepoint_io.py  changepoint_model.py  changepoint_preprocess.py
requirements/: requirements.txt
search/: search_index.json
test-results/: test-results-ubuntu-latest-3.11.xml
tests/: README.md  README_how_to_testing.md  conftest.py  test_changepoint_analysis.py  test_changepoint_io.py  test_changepoint_model.py  test_changepoint_preprocess.py  test_composable.py  test_how_to_notebooks.py  test_how_to_scripts.py  test_notebooks.py  test_plotting.py
(+13 files in other folders)
