[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytau"
version = "0.1.2"
description = "Simple package to perform streamlined, batched inference on pymc3-based changepoint models."
readme = "README.md"
authors = [
    {name = "Abuzar Mahmood", email = "abuzarmahmood@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
    "Framework :: tox",
    "Framework :: Pytest",
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "pymc==5.16.2",
    "numpyro==0.15.1",
    "arviz==0.18.0",
    "graphviz==0.20.3",
    "easygui",
    "tables",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["pytau"]
