[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytau"
version = "0.1.2"
description = "Simple package to perform streamlined, batched inference on pymc3-based changepoint models."
readme = "README.md"
authors = [
    {name = "Abuzar Mahmood", email = "abuzarmahmood@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
    "Framework :: tox",
    "Framework :: Pytest",
]
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">=3.10,<3.12"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
optional-dependencies.dev = {file = ["requirements/requirements-dev.txt"]}
optional-dependencies.docs = {file = ["requirements/requirements-docs.txt"]}
optional-dependencies.gui = {file = ["requirements/requirements-gui.txt"]}

[tool.setuptools]
packages = ["pytau"]
